--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -19,7 +19,7 @@
     </style>
 
     <uvm:skin src="ext-skin.css"  name="${ss.userPagesSkin}"/>
-    <uvm:skin src="userPages.css" name="${ss.userPagesSkin}"/>
+    <uvm:skin src="user.css" name="${ss.userPagesSkin}"/>
 
     <!-- extjs, json and i18n libraries, this should be consolidated into a helper tag. -->
     <uvm:script src="/webui/ext/source/core/Ext.js"/>
