--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -31,13 +31,11 @@
   </head>
   
   
-  <body>
+  <body class="quarantine">
     <div id="content">
       <div id="header">
-      <table border="0" cellpadding="0" cellspacing="0" width="1000">
-        <tr><td><a href="${bs.companyUrl}"><img src="/images/BrandingLogo.gif" alt=""/></a></td>
-        <td class="title"><c:out value="${title}" escapeXml="false"/></td></tr>
-      </table>
+        <a href="${bs.companyUrl}"><img src="/images/BrandingLogo.gif" alt=""/></a>
+        <div class="title"><c:out value="${title}" escapeXml="false"/></div>
       </div>
 
       <div id="main">
