L10N Quarantine - i18n fixes and finalize
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17507 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/inbox.jspx
+++ b/mail-casing/servlets/quarantine/root/inbox.jspx
@@ -6,13 +6,18 @@
 
   <jsp:output omit-xml-declaration="true"/>
 
-  <uvm:i18nload path="mail_casing"/>
+  <jsp:scriptlet>
+    <![CDATA[
+             request.setAttribute( "i18n_map", com.untangle.uvm.LocalUvmContextFactory.context().languageManager().getTranslations("mail_casing")); 
+    ]]>
+  </jsp:scriptlet>  
 
   <c:set var="title" scope="request">
-    <uvm:i18n p0="${currentAddress}">
-      Quarantine Digest for:<br/><span style="font-weight: bold;">{0}</span>
+    <uvm:i18n>
+      Quarantine Digest for:
     </uvm:i18n>
   </c:set>
+  <br/><span style="font-weight: bold;">${currentAddress}</span>
 
   <c:set var="pageTitle" scope="request">
     <uvm:i18n p0="${bs.companyName}" p1="${currentAddress}">
