upgrade Window in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17569 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -749,3 +749,7 @@ div.extendedStats div.title{
 div.extendedStats div.values{
     padding-left: 30px;
 }
+button.iconUpgrade {
+    background: transparent url(../images/admin/icon_upgrade.png) no-repeat center left !important;
+}
+
