drag and drop support
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17799 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -325,6 +325,11 @@ div.iconDeleteRow {
 	width: 100%;
 	cursor: pointer;
 }
+div.iconDrag {
+    background:transparent url(../images/admin/icon_drag.gif) no-repeat center center;
+    width: 100%;
+    cursor: move;
+}
 button.iconRefresh {
     background: transparent url(../images/admin/icon_refresh.png) no-repeat center left !important;
 }
