--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -186,6 +186,9 @@ button.cancelIcon {
 button.saveIcon {
 	background:transparent url(../images/admin/icon_save.png) no-repeat center left !important; 
 }
+button.adTestIcon {
+	background:transparent url(../images/admin/icon_ad_test.png) no-repeat center left !important; 
+}
 div.windowContent {
 	position:relative;
 	margin-top:10px;
