add logout icon
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@17951 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -328,6 +328,11 @@ div.iconDeleteRow {
 	width: 100%;
 	cursor: pointer;
 }
+div.iconLogoutRow {
+    background:transparent url(../images/admin/icon_logout_row.gif) no-repeat center center;
+    width: 100%;
+    cursor: pointer;
+}
 div.iconDrag {
     background:transparent url(../images/admin/icon_drag.gif) no-repeat center center;
     width: 100%;
