--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -765,4 +765,9 @@ div.extendedStats div.values{
 button.iconUpgrade {
     background: transparent url(../images/admin/icon_upgrade.png) no-repeat center left !important;
 }
-
+div.usersColumn {
+    width:99%;
+    height:16px;
+    padding-left: 1px;
+    overflow: hidden;
+}
