Renamed image; added clsIcon to email test button
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18037 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -186,8 +186,8 @@ button.cancelIcon {
 button.saveIcon {
 	background:transparent url(../images/admin/icon_save.png) no-repeat center left !important; 
 }
-button.adTestIcon {
-	background:transparent url(../images/admin/icon_ad_test.png) no-repeat center left !important; 
+button.testIcon {
+	background:transparent url(../images/admin/icon_test.png) no-repeat center left !important; 
 }
 div.windowContent {
 	position:relative;
