Untangle Reports - Status
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18077 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -189,6 +189,9 @@ button.saveIcon {
 button.testIcon {
 	background:transparent url(../images/admin/icon_test.png) no-repeat center left !important; 
 }
+button.actionIcon {
+    background:transparent url(../images/admin/icon_action.gif) no-repeat center left !important; 
+}
 div.windowContent {
 	position:relative;
 	margin-top:10px;
