open vpn in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18187 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -768,7 +768,7 @@ div.extendedStats div.values{
 button.iconUpgrade {
     background: transparent url(../images/admin/icon_upgrade.png) no-repeat center left !important;
 }
-div.usersColumn {
+div.buttonColumn {
     width:99%;
     height:16px;
     padding-left: 1px;
